# conan-semver-trial

./: .editorconfig  LICENSE  README.md  build.py
a/: conanfile.py
a/src/: semver_a.cpp
a110/: CMakeLists.txt  conanfile.py
a110/include/: semver_a.h
a110/src/: semver_a.cpp
a110/test_package/: CMakeLists.txt  conanfile.py
a110/test_package/src/: example.cpp
b/: CMakeLists.txt  conanfile.py
b/include/: semver_b.h
b/src/: semver_b.cpp
b/test_package/: CMakeLists.txt  conanfile.py
b/test_package/src/: example.cpp
super/: CMakeLists.txt  conanfile.py
super/include/: semver_super.h
super/src/: semver_super.cpp
super/test_package/: CMakeLists.txt  conanfile.py
super/test_package/src/: example.cpp
